// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/channel_header/components/HeaderIconWrapper should match snapshot, on FlagIcon 1`] = `
<div
  className="flex-child"
>
  <OverlayTrigger
    defaultOverlayShown={false}
    delayShow={400}
    overlay={
      <Tooltip
        bsClass="tooltip"
        className="text-nowrap"
        id="flaggedTooltip"
        placement="right"
      >
        <FormattedMessage
          defaultMessage="Saved posts"
          id="channel_header.flagged"
        />
      </Tooltip>
    }
    placement="bottom"
    trigger={
      Array [
        "hover",
      ]
    }
  >
    <button
      className="button_class"
      id="button_id"
      onClick={[Function]}
    >
      <FlagIcon
        aria-hidden="true"
        className="icon icon__flag"
      />
    </button>
  </OverlayTrigger>
</div>
`;

exports[`components/channel_header/components/HeaderIconWrapper should match snapshot, on MentionsIcon 1`] = `
<div
  className="flex-child"
>
  <OverlayTrigger
    defaultOverlayShown={false}
    delayShow={400}
    overlay={
      <Tooltip
        bsClass="tooltip"
        className=""
        id="recentMentionsTooltip"
        placement="right"
      >
        <FormattedMessage
          defaultMessage="Recent mentions"
          id="channel_header.recentMentions"
        />
      </Tooltip>
    }
    placement="bottom"
    trigger={
      Array [
        "hover",
      ]
    }
  >
    <button
      className="button_class"
      id="button_id"
      onClick={[Function]}
    >
      <MentionsIcon
        aria-hidden="true"
        className="icon icon__mentions"
      />
    </button>
  </OverlayTrigger>
</div>
`;

exports[`components/channel_header/components/HeaderIconWrapper should match snapshot, on PinIcon 1`] = `
<div
  className="flex-child"
>
  <OverlayTrigger
    defaultOverlayShown={false}
    delayShow={400}
    overlay={
      <Tooltip
        bsClass="tooltip"
        className=""
        id="pinnedPostTooltip"
        placement="right"
      >
        <FormattedMessage
          defaultMessage="Pinned posts"
          id="channel_header.pinnedPosts"
        />
      </Tooltip>
    }
    placement="bottom"
    trigger={
      Array [
        "hover",
      ]
    }
  >
    <button
      className="pinned_posts_class"
      id="button_id"
      onClick={[Function]}
    >
      <PinIcon
        aria-hidden="true"
        className="icon icon__pin"
      />
    </button>
  </OverlayTrigger>
</div>
`;

exports[`components/channel_header/components/HeaderIconWrapper should match snapshot, on PluginIcon with tooltipText 1`] = `
<div
  className="flex-child"
>
  <OverlayTrigger
    defaultOverlayShown={false}
    delayShow={400}
    overlay={
      <Tooltip
        bsClass="tooltip"
        className=""
        id="pluginTooltip"
        placement="right"
      >
        <span>
          plugin_tooltip_text
        </span>
      </Tooltip>
    }
    placement="bottom"
    trigger={
      Array [
        "hover",
      ]
    }
  >
    <button
      className="button_class"
      id="button_id"
      onClick={[Function]}
    >
      <i
        className="fa fa-anchor"
      />
    </button>
  </OverlayTrigger>
</div>
`;

exports[`components/channel_header/components/HeaderIconWrapper should match snapshot, on PluginIcon without tooltipText 1`] = `
<div
  className="flex-child"
>
  <button
    className="button_class"
    id="button_id"
    onClick={[Function]}
  >
    <i
      className="fa fa-anchor"
    />
  </button>
</div>
`;

exports[`components/channel_header/components/HeaderIconWrapper should match snapshot, on SearchIcon 1`] = `
<div
  className="flex-child"
>
  <OverlayTrigger
    defaultOverlayShown={false}
    delayShow={400}
    overlay={
      <Tooltip
        bsClass="tooltip"
        className=""
        id="searchTooltip"
        placement="right"
      >
        <FormattedMessage
          defaultMessage="Search"
          id="channel_header.search"
        />
      </Tooltip>
    }
    placement="bottom"
    trigger={
      Array [
        "hover",
      ]
    }
  >
    <button
      className="search_class"
      id="button_id"
      onClick={[Function]}
    >
      <SearchIcon
        aria-hidden="true"
        className="icon icon__search"
      />
    </button>
  </OverlayTrigger>
</div>
`;
